--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     <p>
         <img src="https://raw.githubusercontent.com/jlet-functions/jlet-functions.github.io/refs/heads/main/github-icon.svg"
              style="height:42px; vertical-align: middle;" alt="github icon"/> <a
-            href="https://github.com/jlet-functions/"> github</a> | <a
-            href="https://github.com/jlet-functions/jlet?tab=readme-ov-file#stebz"> docs</a>
+            href="https://github.com/jlet-functions/jlet"> github</a>
     </p>
 </div>
 </body>
